--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.15.18",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
